Text and Nar bar more responsive on smaller screens

--- a/MontyArchiveWebsite/app/assets/stylesheets/application.scss
+++ b/MontyArchiveWebsite/app/assets/stylesheets/application.scss
@@ -183,6 +183,7 @@ $dropDown       : true;
 	padding: 15px;
 	border-radius: 10px;
 	color: var(--color-white);
+	text-size-adjust: auto;
  }
 #textbox_y{
 	background-color: var(--color-gray-alpha)!important;
