--- a/MontyArchiveWebsite/app/views/social/index.html.erb
+++ b/MontyArchiveWebsite/app/views/social/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Social#index</h1>
-<p>Find me in app/views/social/index.html.erb</p>
+<body id="body_w">
+<h1 id="textbox_w">Social#index</h1>
+<p id="textbox_w">Find me in app/views/social/index.html.erb</p>
