df2 page made, animation template close to complete

--- a/MontyArchiveWebsite/app/views/pages/animations/df/ep-1.html.erb
+++ b/MontyArchiveWebsite/app/views/pages/animations/df/ep-1.html.erb
@@ -1,6 +1,6 @@
 <body id="body_r">
  <div>
-  <%= image_tag("df1") %>
+  <%= image_tag("df1", style: "max-width: 100%;") %>
  </div>
 <br>
 <h1 id="textbox_r">Dead Fantasy I</h1>
