--- a/MontyArchiveWebsite/app/views/pages/animations/df/about.html.erb
+++ b/MontyArchiveWebsite/app/views/pages/animations/df/about.html.erb
@@ -3,6 +3,23 @@
 <br>
 <h1 id="textbox_r">Dead Fantasy Series</h1>
 <br>
-<p id="textbox_r">Info about df.</p>
+<p id="textbox_r">
+Dead Fantasy was a series produced by Monty Oum where characters from the "Dead or Alive" and "Final Fantasy" game series fought each other.
+They were originally released on the website GameTrailers since the movie files were too big to upload to Youtube.
+The original GameTrailers videos were not archived here since they were lost when the site closed, instead later uploads to Monty's Youtube channel were used.
+</p>
+<br>
+<h1 id="textbox_r">Links to Dead Fantasy Pages</h1>
+<br>
+<p id="textbox_r">
+<a href="ep-1">Dead Fantasy I</a>
+<a href="ep-2">Dead Fantasy II</a>
+<a href="ep-3">Dead Fantasy III</a>
+<a href="ep-4">Dead Fantasy IV</a>
+<a href="ep-5">Dead Fantasy V</a>
+<a href="ep-6">Dead Fantasy Future Episodes</a>
+<a href=""></a>
+<a href=""></a>
+</p>
 
 </body>
