--- a/MontyArchiveWebsite/app/views/pages/animations/df/ep-2.html.erb
+++ b/MontyArchiveWebsite/app/views/pages/animations/df/ep-2.html.erb
@@ -9,6 +9,39 @@
   <iframe  style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/c-rTM9qOasQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
 <br>
-<p id="textbox_r">Info about df2.</p>
+<h1 id="textbox_r">Information</h1>
+<br>
+<p id="textbox_r">
+Description below from Monty's Youtube channel, any GameTrailers descriptions were lost when the site closed.
+</p>
+<br>
+<h1 id="textbox_r">Original Youtube Description</h1>
+<br>
+<p id="textbox_r">
+Published on Mar 12, 2010
 
+Category
+People & Blogs
+Music in this video
+Learn more
+Listen ad-free with YouTube Premium
+Song
+DK Vs. Han from The Fast and The Furious; Tokyo Drift - Brian Tyler (2006) - Universal Pictures Film Music
+Artist
+Brian Tyler
+Album
+The Fast And The Furious: Tokyo Drift
+Writers
+Brian Tyler
+Licensed to YouTube by
+AdRev for a 3rd Party (on behalf of Universal Pictures Film Music); LatinAutor, UNIAO BRASILEIRA DE EDITORAS DE MUSICA - UBEM, LatinAutor - UMPG, UMPG Publishing, UMPI, and 3 Music Rights Societies
+Song
+The Fast And The Furious: Tokyo Drift  from The Fast and The Furious; Tokyo Drift - Brian Tyler (2006)
+Album
+The Fast And The Furious: Tokyo Drift
+Writers
+Brian Tyler
+Licensed to YouTube by
+AdRev for a 3rd Party; Sony ATV Publishing, LatinAutor, UNIAO BRASILEIRA DE EDITORAS DE MUSICA - UBEM, UMPG Publishing, LatinAutor - UMPG, UMPI, and 6 Music Rights Societies
+</p>
 </body>
