--- a/MontyArchiveWebsite/app/assets/stylesheets/application.scss
+++ b/MontyArchiveWebsite/app/assets/stylesheets/application.scss
@@ -51,6 +51,10 @@ body {
     background-attachment: fixed;
 }
 
+p{
+	white-space: pre-line;
+}
+
 #responsive{
 	position:relative;
 	padding-top:56.25%;
