--- a/MontyArchiveWebsite/app/views/pages/animations/df/ep-1.html.erb
+++ b/MontyArchiveWebsite/app/views/pages/animations/df/ep-1.html.erb
@@ -9,6 +9,18 @@
   <iframe  style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/SIy5Q3EB6ec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
 <br>
-<p id="textbox_r">Info about df1.</p>
+<h1 id="textbox_r">Information</h1>
+<br>
+<p id="textbox_r">
+Description below from Monty's Youtube channel, any GameTrailers descriptions were lost when the site closed.
+</p>
+<br>
+<h1 id="textbox_r">Original Youtube Description</h1>
+<br>
+<p id="textbox_r">
+Published on Mar 12, 2010
 
+Category
+People & Blogs
+</p>
 </body>
